@@ -8,6 +8,9 @@
 
     * tests/test_math.c: Add skelton module to check m_math.c.
 
+    * tests/test_object_list.c: Fix incorrect object reference in checks for
+      check_object_list_scale: object3 -> object6.
+
 2019-11-01 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/object/o_circle_object.c: Add Doxygen group geda-circle-object-proc.
